# colorworks

./: .gitignore  COLORWORKS_PLAN.md  DESIGN.md  GLYPHFIT_PLAN.md  HANDOFF.md  PANG_PLAN.md  README.md  RESEARCH.md  block_decode.py  braille_decode.py  hybrid_decode.py  pyproject.toml  regrid_decode.py  serve
.github/workflows/: deploy-pages.yml
colorworks/: __init__.py  compositor.py  domain.py  presets.py  recipe.py  scheduler.py  storage.py
colorworks/algorithms/: __init__.py  comparison_harness.py  cvt_stippling.py  dbs.py  depixelate.py  dither.py  fixtures.py  floyd_steinberg.py  image_ops.py  ordered_bayer.py  palette_quantize.py  pang_halftoning.py  pattern_catalog.py  quick_mode.py  saed.py  structure_analyzer.py  tonal_analyzer.py  tone_dither.py
colorworks/pages/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
colorworks/pages/scripts/: gen_blue_noise.py
colorworks/pages/src/: blockmosaic.test.ts  blockmosaic.ts  blue-noise-tiles.ts  colorworks.test.ts  colorworks.ts  decode.test.ts  decode.ts  depixelate.test.ts  depixelate.ts  glyph_alphabet.ts  glyphfit.test.ts  glyphfit.ts  output_size.test.ts  schema.ts  (+7 more)
colorworks/renderers/: __init__.py  bayer.py
colorworks/web/: __init__.py  server.py
mockups/: REDESIGN.md  quick-mode.html
tests/: test_bayer.py  test_depixelate.py  test_exports.py  test_harness.py  test_output_size.py  test_palette_quantize.py  test_phase1a.py  test_phase1b.py  test_phase2.py  test_phase3.py  test_phase3_5.py  test_phase4a.py  test_recipe.py  test_saed.py  test_storage.py  test_tone_dither.py
(+3 files in other folders)
