[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "colorworks"
version = "0.1.0"
description = "Phase 0 local ordered-dither web tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
colorworks = "colorworks.web.server:main"

[tool.setuptools.packages.find]
include = ["colorworks*"]

[tool.setuptools.package-data]
"colorworks.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
